@@ -3,6 +3,7 @@ New features:
 	* [general]
 		* New application theme "Dracula"
 		* New option in the application settings to run a selected CAS engine at startup
+		* Share the project via email, Nextcloud, etc. directly from the main menu
 	* [worksheet]
 		* Add possibility to use column labels as axis ticks
 		* New visualization types:
